--- a/src/main/webapp/welcome.html
+++ b/src/main/webapp/welcome.html
@@ -2,7 +2,7 @@
 <body bgcolor="pink">
     <h1>Welcome to Cafe home page</h1>
     <hr/>
-    <a href="home.com/cafe"> Link to CCD Cafe </a>
+    <a href="home.com/cafe"> Welcome to love Calculator HOME
 </body>
 </body>
 <body>
